creati benchmark per test delle versioni parallele di quick sort e merge sort con mpi

--- a/parallelo/Makefile
+++ b/parallelo/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -Wall -g -fopenmp
+CFLAGS = -Wall -g -fopenmp -O3
 SRCDIR = src
 OUTDIR = out
 SOURCES = $(SRCDIR)/main.c $(SRCDIR)/lib.c
