prima implementazione con mpi

--- a/parallelo/Makefile
+++ b/parallelo/Makefile
@@ -1,27 +1,27 @@
 CC = gcc
 CFLAGS = -Wall -g -fopenmp -O3
-SRCDIR = src
-OUTDIR = out
-SOURCES = $(SRCDIR)/main.c $(SRCDIR)/lib.c
-TARGET = $(OUTDIR)/main.exe
+SRC = src
+OUT = out
+SOURCES = $(SRC)/main.c $(SRC)/lib.c
+TARGET = $(OUT)/main
 
 # Crea la directory out se non esiste e compila
-$(TARGET): $(SOURCES) | $(OUTDIR)
+compila_run: $(SOURCES) | $(OUT)
 	$(CC) $(CFLAGS) -o $(TARGET) $(SOURCES)
 
 # Crea la directory out
-$(OUTDIR):
-	if not exist $(OUTDIR) mkdir $(OUTDIR)
+$(OUT):
+	if not exist $(OUT) mkdir $(OUT)
 
 # Pulisce i file generati
 clean:
-	rm -I $(OUTDIR)/*
+	rm -I $(OUT)/*
 
 # Esegue il programma
-run: $(TARGET)
+run: compila_run
 	$(TARGET)
 compila_merge: ./src/merge_mp.c
-	mpicc -Wall $(SRCDIR)/merge_mp.c -o ./out/merge_mp -lm #-D DEBUG
+	mpicc -Wall -fopenmp $(SRC)/merge_mp.c $(SRC)/lib.c -o ./out/merge_mp -lm -D DEBUG
 
 merge: compila_merge
 	mpirun -np 8 ./out/merge_mp 
@@ -37,7 +37,7 @@ compila_sup: ./src/sup.c
 sup:compila_sup 
 	./out/sup
 compila_test: ./src/test_open_mp.c
-	mpicc -Wall  $(SRCDIR)/test_open_mp.c -o ./out/test_open_mp
+	mpicc -Wall  $(SRC)/test_open_mp.c -o ./out/test_open_mp
 
 tests: compila_test
 	mpirun -np 4 ./out/test_open_mp
