creata versione sequenziale degli algoritmi che funziona con int e raccolti alcuni dati risultati sequenziali

--- a/sequenziale/Makefile
+++ b/sequenziale/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -Wall -g #-fopenmp
+CFLAGS = -Wall -g -O3 #-fopenmp
 
 OUT = out
 SRC = src
@@ -7,6 +7,11 @@ SRC = src
 compila_main:$(SRC)/main.c | $(OUT) 
 	gcc $(CFLAGS)  $(SRC)/main.c $(SRC)/sort.c -o $(OUT)/main
 
+compila_main_int:$(SRC)/main_int.c | $(OUT) 
+	gcc $(CFLAGS)  $(SRC)/main_int.c $(SRC)/sort_int.c -o $(OUT)/i_main
+
+irun: compila_main_int
+	./$(OUT)/i_main
 run: compila_main
 	./$(OUT)/main
 
