creata versione parallella per tipo int degli algortimi di ordinamento

--- a/parallelo/Makefile
+++ b/parallelo/Makefile
@@ -1,5 +1,5 @@
 CC = gcc
-CFLAGS = -Wall   -g -fopenmp -O3
+CFLAGS = -Wall   -g -fopenmp -O3 -D DEBUG
 SRC = src
 OUT = out
 SOURCES = $(SRC)/main.c $(SRC)/lib.c
@@ -8,6 +8,8 @@ TARGET = $(OUT)/main.out
 # Crea la directory out se non esiste e compila
 compila_run: $(SOURCES) | $(OUT)
 	$(CC) $(CFLAGS) -o $(TARGET) $(SOURCES)
+compila_run_int:./src/main_int.c
+	$(CC) $(CFLAGS) $(SRC)/main_int.c $(SRC)/lib_int.c -o out/i_main
 
 # Crea la directory out
 $(OUT):
@@ -19,16 +21,31 @@ compila_omp:./src/omp.c
 omp:compila_omp
 	./out/omp
 
+compila_omp_int:./src/omp_int.c
+	$(CC) $(CFLAGS) $(SRC)/omp_int.c $(SRC)/lib_int.c -o out/i_omp
+
+iomp:compila_omp_int
+	./out/i_omp
 
 compila_mpi:src/mpi.c 
-	mpicc  -g -fopenmp -O3  src/mpi.c src/lib.c -o out/mpi -lm -D DEBUG
+	mpicc  -g -fopenmp -O3  src/mpi.c src/lib.c -o out/mpi -lm #-D DEBUG
+
+compila_mpi_int:src/mpi_int.c 
+	mpicc  -g -fopenmp -O3  src/mpi_int.c src/lib_int.c -o out/i_mpi -lm #-D DEBUG
 
 mpi:compila_mpi 
-	mpirun -np 10 ./out/mpi
+	mpirun -np 16 ./out/mpi
 
+i_mpi:compila_mpi_int 
+	mpirun -np 16 ./out/i_mpi
+	
 # Esegue il programma
 run: compila_run
 	$(TARGET)
+
+irun: compila_run_int
+	./out/i_main
+
 compila_merge: ./src/merge_mp.c
 	mpicc -Wall -O3 -fopenmp  $(SRC)/merge_mp.c $(SRC)/lib.c -o ./out/merge_mp -lm #-D DEBUG
 
